--- a/client/pom.xml
+++ b/client/pom.xml
@@ -69,6 +69,12 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.9.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
