--- a/client/pom.xml
+++ b/client/pom.xml
@@ -64,6 +64,12 @@
             <version>1.15</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.tyrus.bundles</groupId>
+            <artifactId>tyrus-standalone-client</artifactId>
+            <version>1.15</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>edu.byu.cs240</groupId>
             <artifactId>server</artifactId>
             <version>1.0.0</version>
